# sntpd

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  HOWTO  HOWTO.md  Makefile  Makefile.am  README  README.md  adjtimex.8  adjtimex.c  configure.ac  mini-ntpclient.c  ntpclient.1  ntpclient.8  ntpclient.c  ntpclient.h  ntpclient.service.in  phaselock.c  rate2.awk  sntpd.service.in  todo
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  coverity.yml  release.yml
debian/: .gitignore  adjtimex-sntpd.install  changelog  control  copyright  rules  sntpd.install
doc/: HOWTO.md  Makefile.am
docs/: CONTRIBUTING.md  Makefile.orig  TODO.md
man/: Makefile.am  adjtimex.1  ntpclient.8  sntpd.8
src/: .gitignore  Makefile.am  adjtimex.c  logit.c  mini-ntpclient.c  ntpclient.c  ntpclient.h  phaselock.c  server.c  sntpd.c  sntpd.h
